Adds styling forr nav

--- a/app/assets/stylesheets/components/_main_nav.scss
+++ b/app/assets/stylesheets/components/_main_nav.scss
@@ -1,18 +1,26 @@
 .main-nav {
-
+  display: flex;
+  justify-content:space-between;
+  padding: 15px 0;
 }
 
 .left-nav > ul,
 .right-nav > ul {
-
+  display: flex;
+  align-items:center;
 }
 
 .left-nav > ul > li {
-
+  font-family: sans-serif;
+  font-size: 12px;
+  text-transform: uppercase;
 }
 
 .right-nav > ul > li {
-
+  font-family: sans-serif;
+  font-size: 12px;
+  text-transform: uppercase;
+  margin: 0 2px;
 }
 
 .right-nav > ul > li:last-of-type {
@@ -21,14 +29,16 @@
 
 .left-nav > ul > li:hover,
 .right-nav > ul > li:last-of-type:hover {
-
+  background-color: $lightest-gray;
+  cursor: pointer;
 }
 
 .left-nav span {
-
+  margin: 0 5px;
 }
 
 
 .right-nav i {
-
+  margin: 0 5px;
+  font-size: 16px;
 }
