--- a/app/assets/stylesheets/base/layout.scss
+++ b/app/assets/stylesheets/base/layout.scss
@@ -13,22 +13,22 @@ body {
 }
 
 button {
-	// background-color:
-	// border-color:
-	// color:
-	// font-weight:
-	// padding:
-	// border-radius:
+	background-color: $light-blue;
+	border-color: $blue;
+	color: white;
+	font-weight: 400;
+	padding: 5px;
+	border-radius: 2px;
 	// transition:
-	// font-family:
+	font-family: $sans-serif;
 	// text-transform:
-	// font-size:
-	// text-align:
+	font-size: inherit;
+	text-align: center;
 }
 
 button:hover {
-	// background-color:
-	// border-color:
+	background-color: $blue;
+	border-color: $dark-blue;
 }
 
 /*
