--- a/app/assets/stylesheets/components/_main_nav.scss
+++ b/app/assets/stylesheets/components/_main_nav.scss
@@ -14,6 +14,7 @@
   font-family: sans-serif;
   font-size: 12px;
   text-transform: uppercase;
+  padding: 5px;
 }
 
 .right-nav > ul > li {
@@ -29,8 +30,9 @@
 
 .left-nav > ul > li:hover,
 .right-nav > ul > li:last-of-type:hover {
-  background-color: $lightest-gray;
+  background-color: $light-gray;
   cursor: pointer;
+  border-radius: 2px;
 }
 
 .left-nav span {
@@ -39,6 +41,7 @@
 
 
 .right-nav i {
+  position: relative;
   margin: 0 5px;
   font-size: 16px;
 }
