--- a/app/views/shared/_main_nav.html.erb
+++ b/app/views/shared/_main_nav.html.erb
@@ -21,7 +21,9 @@
 				<button type="button" name="button">LOG IN</button>
 			</li>
 			<li>
-				<i class="fa fa-cog" aria-hidden="true"></i>
+				<i id="gear-dropdown-btn" class="fa fa-cog" aria-hidden="true">
+					<%= render partial: 'shared/gear_dropdown' %>
+				</i>
 			</li>
 		</ul>
 	</nav>
