Update AA Times

--- a/app/assets/stylesheets/components/_gear_dropdown.scss
+++ b/app/assets/stylesheets/components/_gear_dropdown.scss
@@ -2,7 +2,8 @@
 .gear-dropdown {
   position: absolute;
   top: 25px;
-  left: -210px;
+  // left: -210px;
+  right: 0px;
   z-index: 1;
   background-color: white;
   border-radius: 3px;
